// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > should render correctly 1`] = `
"<label class="input"><input type="checkbox" class="native">
  <div class="marker">
    <anonymous-stub class="checked" size="16"></anonymous-stub>
  </div><span class="label">mock content</span>
</label>"
`;

exports[`Switch > should render with an error prop 1`] = `
"<label class="input error" aria-invalid="true" aria-errormessage="Test Error"><input type="checkbox" class="native">
  <div class="marker">
    <anonymous-stub class="checked" size="16"></anonymous-stub>
  </div><span class="label">mock content</span>
</label>"
`;
